force-app/main/default/objects/SOE__c/SOE__c.object-meta.xml
<CustomObject>
    <label>SOE</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>SOE</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SOEs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>