force-app/main/default/objects/SOE__c/fields/All_Tasks__c.field-meta.xml
<CustomField>
    <fullName>All_Tasks__c</fullName>
    <formula>HYPERLINK(&quot;/apex/I8__AllTasks_ClientSide?id=&quot;+ Id ,  
    IMAGE(&quot;/servlet/servlet.FileDownload?file=01558000001ZLWt&quot;, &quot;Tasks&quot;,25,60),
    &quot;_blank&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All Tasks</label>
    <type>Text</type>
</CustomField>