force-app/main/default/objects/SOE__c/fields/Backout__c.field-meta.xml
<CustomField>
    <fullName>Backout__c</fullName>
    <label>Backout Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Automated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>