force-app/main/default/objects/SOE__c/fields/BackOut_Stage__c.field-meta.xml
<CustomField>
    <fullName>BackOut_Stage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BackOut Stage</label>
    <type>Checkbox</type>
</CustomField>