force-app/main/default/objects/SOE__c/fields/Baseline_Start__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Start__c</fullName>
    <label>Baseline Start</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>