force-app/main/default/objects/SOE__c/fields/BAU_Impact__c.field-meta.xml
<CustomField>
    <fullName>BAU_Impact__c</fullName>
    <inlineHelpText>Business As Usual Impact</inlineHelpText>
    <label>BAU Impact</label>
    <type>DateTime</type>
</CustomField>