force-app/main/default/objects/SOE__c/fields/Change_Record__c.field-meta.xml
<CustomField>
    <fullName>Change_Record__c</fullName>
    <label>Change Request No</label>
    <length>10</length>
    <type>Text</type>
</CustomField>