force-app/main/default/objects/SOE__c/fields/Cloned_SOE__c.field-meta.xml
<CustomField>
    <fullName>Cloned_SOE__c</fullName>
    <label>Cloned SOE</label>
    <length>200</length>
    <type>Text</type>
</CustomField>