force-app/main/default/objects/SOE__c/fields/Comp_Pre_Stacks__c.field-meta.xml
<CustomField>
    <fullName>Comp_Pre_Stacks__c</fullName>
    <label>Comp Pre Stacks</label>
    <summaryFilterItems>
        <field>Task__c.Stage__c</field>
        <operation>equals</operation>
        <value>Pre</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Task__c.Is_Stack__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Task__c.Status__c</field>
        <operation>equals</operation>
        <value>Completed, Completed-Jump</value>
    </summaryFilterItems>
    <summaryForeignKey>Task__c.SOE__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>