force-app/main/default/objects/SOE__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <formula>(Total_Completed_Tasks_in_Imp__c / Total_Tasks_In_Imp__c ) * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completed %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>