force-app/main/default/objects/SOE__c/fields/Conference_Call_No__c.field-meta.xml
<CustomField>
    <fullName>Conference_Call_No__c</fullName>
    <label>Audio Call No</label>
    <type>Phone</type>
</CustomField>