force-app/main/default/objects/SOE__c/fields/Current_Time__c.field-meta.xml
<CustomField>
    <fullName>Current_Time__c</fullName>
    <label>Current Time</label>
    <type>DateTime</type>
</CustomField>