force-app/main/default/objects/SOE__c/fields/Dealy_Ahead_mins__c.field-meta.xml
<CustomField>
    <fullName>Dealy_Ahead_mins__c</fullName>
    <formula>IF(OR( ISPICKVAL(Status__c , &#39;Imp Completed&#39;)  ,ISPICKVAL(Status__c , &#39;SOE Completed&#39;) ),
 ( Max_End_Time__c -  Max_Planned_End__c ) * 24 * 60,
( Max_Forecast_End__c -  Max_Planned_End__c ) * 24 * 60  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealy/Ahead(mins)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>