force-app/main/default/objects/SOE__c/fields/Duration_Changed__c.field-meta.xml
<CustomField>
    <fullName>Duration_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duration Changed</label>
    <type>Checkbox</type>
</CustomField>