force-app/main/default/objects/SOE__c/fields/Imp_Baseline_Start__c.field-meta.xml
<CustomField>
    <fullName>Imp_Baseline_Start__c</fullName>
    <label>Imp Baseline Start</label>
    <summarizedField>Task__c.Baseline_Start__c</summarizedField>
    <summaryFilterItems>
        <field>Task__c.Stage__c</field>
        <operation>equals</operation>
        <value>Imp</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Task__c.Is_Stack__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Task__c.Stage_Level__c</field>
        <operation>equals</operation>
        <value>Implementation</value>
    </summaryFilterItems>
    <summaryForeignKey>Task__c.SOE__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>