force-app/main/default/objects/SOE__c/fields/Imp_Duration__c.field-meta.xml
<CustomField>
    <fullName>Imp_Duration__c</fullName>
    <formula>TEXT( FLOOR( Max_Planned_End__c  - Min_Planned_Start__c ) ) &amp; &quot;d &quot; 
&amp; TEXT( FLOOR( MOD( (Max_Planned_End__c  - Min_Planned_Start__c ) * 24, 24 ) ) ) &amp; &quot;h &quot; 
&amp; TEXT( ROUND( MOD( (Max_Planned_End__c  - Min_Planned_Start__c ) * 24 * 60, 60 ), 0 ) ) &amp; &quot;m&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Imp Duration</label>
    <type>Text</type>
</CustomField>