force-app/main/default/objects/SOE__c/fields/Imp_Start__c.field-meta.xml
<CustomField>
    <fullName>Imp_Start__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Imp Start</label>
    <type>Checkbox</type>
</CustomField>