force-app/main/default/objects/SOE__c/fields/Is_Template__c.field-meta.xml
<CustomField>
    <fullName>Is_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this SOE a Template for future</inlineHelpText>
    <label>Template</label>
    <type>Checkbox</type>
</CustomField>