force-app/main/default/objects/SOE__c/fields/Max_Forecast_End__c.field-meta.xml
<CustomField>
    <fullName>Max_Forecast_End__c</fullName>
    <label>Max Forecast End</label>
    <summarizedField>Task__c.Forecast_End__c</summarizedField>
    <summaryFilterItems>
        <field>Task__c.Stage__c</field>
        <operation>equals</operation>
        <value>Imp</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Task__c.Is_Stack__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Task__c.Stage_Level__c</field>
        <operation>equals</operation>
        <value>Implementation</value>
    </summaryFilterItems>
    <summaryForeignKey>Task__c.SOE__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>