force-app/main/default/objects/SOE__c/fields/Min_Start_All__c.field-meta.xml
<CustomField>
    <fullName>Min_Start_All__c</fullName>
    <label>Min Start All</label>
    <summarizedField>Task__c.Start_Time__c</summarizedField>
    <summaryFilterItems>
        <field>Task__c.Stage_Level__c</field>
        <operation>equals</operation>
        <value>Implementation</value>
    </summaryFilterItems>
    <summaryForeignKey>Task__c.SOE__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>