force-app/main/default/objects/SOE__c/fields/MIS__c.field-meta.xml
<CustomField>
    <fullName>MIS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MIS</label>
    <referenceTo>MIS__c</referenceTo>
    <relationshipLabel>SOEs</relationshipLabel>
    <relationshipName>SOEs</relationshipName>
    <type>Lookup</type>
</CustomField>