force-app/main/default/objects/SOE__c/fields/Not_Comp_Post_Stacks__c.field-meta.xml
<CustomField>
    <fullName>Not_Comp_Post_Stacks__c</fullName>
    <label>Not Comp Post Stacks</label>
    <summaryFilterItems>
        <field>Task__c.Stage__c</field>
        <operation>equals</operation>
        <value>Post</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Task__c.Is_Stack__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Task__c.Stage_Level__c</field>
        <operation>equals</operation>
        <value>Implementation</value>
    </summaryFilterItems>
    <summaryForeignKey>Task__c.SOE__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>