force-app/main/default/objects/SOE__c/fields/Post_Implementation_Stage__c.field-meta.xml
<CustomField>
    <fullName>Post_Implementation_Stage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post-Imp Stage</label>
    <type>Checkbox</type>
</CustomField>