force-app/main/default/objects/SOE__c/fields/Pre_Imp_Start__c.field-meta.xml
<CustomField>
    <fullName>Pre_Imp_Start__c</fullName>
    <label>Pre Imp Start</label>
    <type>DateTime</type>
</CustomField>