force-app/main/default/objects/SOE__c/fields/Pre_Implementation_Stage__c.field-meta.xml
<CustomField>
    <fullName>Pre_Implementation_Stage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-Imp Stage</label>
    <type>Checkbox</type>
</CustomField>