force-app/main/default/objects/SOE__c/fields/Programme__c.field-meta.xml
<CustomField>
    <fullName>Programme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Programme</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Department__c</field>
            <operation>equals</operation>
            <valueField>Programme__c.Department__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Programme__c</referenceTo>
    <relationshipLabel>SOEs</relationshipLabel>
    <relationshipName>SOEs</relationshipName>
    <type>Lookup</type>
</CustomField>