force-app/main/default/objects/SOE__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Programme__c</field>
            <operation>equals</operation>
            <valueField>Project__c.Programme__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>SOEs</relationshipLabel>
    <relationshipName>SOEs</relationshipName>
    <type>Lookup</type>
</CustomField>