force-app/main/default/objects/SOE__c/fields/QA_Manager__c.field-meta.xml
<CustomField>
    <fullName>QA_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QA Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Id</field>
            <operation>notEqual</operation>
            <valueField>$Source.OwnerId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>SOEs</relationshipName>
    <type>Lookup</type>
</CustomField>