force-app/main/default/objects/SOE__c/fields/QA_Review_Required__c.field-meta.xml
<CustomField>
    <fullName>QA_Review_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QA Review Required</label>
    <type>Checkbox</type>
</CustomField>