force-app/main/default/objects/SOE__c/fields/RAG__c.field-meta.xml
<CustomField>
    <fullName>RAG__c</fullName>
    <formula>IF(TEXT(SOE_RAG__c) = &#39;Green&#39;,IMAGE(&quot;/resource/i8__rag_green&quot;,&quot;Green&quot;,23,23),

IF(TEXT(SOE_RAG__c) = &#39;Amber&#39;,IMAGE(&quot;/resource/i8__rag_amber&quot;,&quot;Amber&quot;,23,23),

IF(TEXT(SOE_RAG__c) = &#39;Red&#39;,IMAGE(&quot;/resource/i8__rag_red&quot;,&quot;Red&quot;,23,23),null)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RAG</label>
    <type>Text</type>
</CustomField>