force-app/main/default/objects/SOE__c/fields/Schedule_End__c.field-meta.xml
<CustomField>
    <fullName>Schedule_End__c</fullName>
    <label>Schedule End</label>
    <type>DateTime</type>
</CustomField>