force-app/main/default/objects/SOE__c/fields/Schedule_Start__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Start__c</fullName>
    <label>Schedule Start</label>
    <type>DateTime</type>
</CustomField>