force-app/main/default/objects/SOE__c/fields/SOE_Description__c.field-meta.xml
<CustomField>
    <fullName>SOE_Description__c</fullName>
    <label>Summary</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>