force-app/main/default/objects/SOE__c/fields/SOE_Title__c.field-meta.xml
<CustomField>
    <fullName>SOE_Title__c</fullName>
    <label>SOE Title</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>