force-app/main/default/objects/SOE__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Build</fullName>
                <default>true</default>
                <label>Build</label>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Freeze</fullName>
            </value>
            <value>
                <fullName>Imp In Progress</fullName>
            </value>
            <value>
                <fullName>Imp Completed</fullName>
            </value>
            <value>
                <fullName>BackingOut</fullName>
            </value>
            <value>
                <fullName>BackedOut</fullName>
            </value>
            <value>
                <fullName>BackoutClosed</fullName>
            </value>
            <value>
                <fullName>Abandoned</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>SOE Completed</fullName>
            </value>
            <value>
                <fullName>BO In Progress</fullName>
            </value>
            <value>
                <fullName>BO Completed</fullName>
            </value>
            <value>
                <fullName>SOE BO Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>