force-app/main/default/objects/SOE__c/fields/Suspended_Time_mins__c.field-meta.xml
<CustomField>
    <fullName>Suspended_Time_mins__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Suspended Time(mins)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>