force-app/main/default/objects/SOE__c/fields/System_Now__c.field-meta.xml
<CustomField>
    <fullName>System_Now__c</fullName>
    <label>System Now</label>
    <type>DateTime</type>
</CustomField>