force-app/main/default/objects/SOE__c/fields/Task_Late_Threshold_Mins__c.field-meta.xml
<CustomField>
    <fullName>Task_Late_Threshold_Mins__c</fullName>
    <defaultValue>5</defaultValue>
    <label>Task Duration(Default)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>