force-app/main/default/objects/SOE__c/fields/Total_Completed_Tasks_in_Imp__c.field-meta.xml
<CustomField>
    <fullName>Total_Completed_Tasks_in_Imp__c</fullName>
    <label>Total Completed Tasks in Imp</label>
    <summaryFilterItems>
        <field>Task__c.Stage_Level__c</field>
        <operation>equals</operation>
        <value>Implementation</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Task__c.Stage__c</field>
        <operation>equals</operation>
        <value>Imp</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Task__c.Is_Stack__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Task__c.Status__c</field>
        <operation>equals</operation>
        <value>Completed, Completed-Jump, Force Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Task__c.SOE__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>